# rustwebdev-book

./: .gitignore  Cargo.toml  log4rs.yaml  question.json  setup.toml
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
migrations/: 20240423010825_questions_table.down.sql  20240423010825_questions_table.up.sql  20240423011611_answers_table.up.sql  20240424021513_create_accounts_table.down.sql  20240424021513_create_accounts_table.up.sql  20240427025248_answers_table.up.sql
src/: main.rs  notes.md  profanity.rs  store.rs
src/routes/: answer.rs  authentication.rs  question.rs
src/types/: account.rs  answer.rs  pagination.rs  question.rs
