[package]
name = "book"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handle-errors = { path = "handle-errors" }
log = "0.4"
log4rs = "1.0"
uuid = {version = "0.8", features = ["v4"]}
