[package]
name = "book"
version = "1.0.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handle-errors = { path = "handle-errors" }
uuid = {version = "0.8", features = ["v4"]}
tracing = { version="0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "migrate", "postgres" ] }
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.3"
reqwest-retry = "0.5"
rand = "0.8.4"
rust-argon2 = "1.0"
paseto = "2.0.2+1.0.3"
chrono = "0.4.19"
config = { version = "0.14.0", features = ["toml"] }
